// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should be like snapshot when AppState is DetailsPage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    appState="details page"
    getItems={null}
    items={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Header__HeaderWrapper>
          <Logo />
          <Details
            getItems={null}
            item={Object {}}
            overview=""
            poster_path=""
            release_date=""
            runtime={null}
            tagline=""
            title=""
            vote_average={0}
          />
        </Header__HeaderWrapper>,
        <InfoBar
          appState="details page"
          getItems={null}
          item={Object {}}
          items={Array []}
          setSortBy={null}
          total={0}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Logo />,
            <Details
              getItems={null}
              item={Object {}}
              overview=""
              poster_path=""
              release_date=""
              runtime={null}
              tagline=""
              title=""
              vote_average={0}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "getItems": null,
              "item": Object {},
              "overview": "",
              "poster_path": "",
              "release_date": "",
              "runtime": null,
              "tagline": "",
              "title": "",
              "vote_average": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "appState": "details page",
          "getItems": null,
          "item": Object {},
          "items": Array [],
          "setSortBy": null,
          "total": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Header__HeaderWrapper>
            <Logo />
            <Details
              getItems={null}
              item={Object {}}
              overview=""
              poster_path=""
              release_date=""
              runtime={null}
              tagline=""
              title=""
              vote_average={0}
            />
          </Header__HeaderWrapper>,
          <InfoBar
            appState="details page"
            getItems={null}
            item={Object {}}
            items={Array []}
            setSortBy={null}
            total={0}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Logo />,
              <Details
                getItems={null}
                item={Object {}}
                overview=""
                poster_path=""
                release_date=""
                runtime={null}
                tagline=""
                title=""
                vote_average={0}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "getItems": null,
                "item": Object {},
                "overview": "",
                "poster_path": "",
                "release_date": "",
                "runtime": null,
                "tagline": "",
                "title": "",
                "vote_average": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "appState": "details page",
            "getItems": null,
            "item": Object {},
            "items": Array [],
            "setSortBy": null,
            "total": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should be like snapshot when AppState is SearchPage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    appState="search page"
    getItems={null}
    items={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Header__HeaderWrapper>
          <Logo />
          <SearchField
            appState="search page"
            getItems={null}
            items={Array []}
            searchBy="title"
            setSearchBy={null}
            value=""
          />
        </Header__HeaderWrapper>,
        <InfoBar
          appState="search page"
          getItems={null}
          item={Object {}}
          items={Array []}
          setSortBy={null}
          total={0}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Logo />,
            <SearchField
              appState="search page"
              getItems={null}
              items={Array []}
              searchBy="title"
              setSearchBy={null}
              value=""
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "appState": "search page",
              "getItems": null,
              "items": Array [],
              "searchBy": "title",
              "setSearchBy": null,
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "appState": "search page",
          "getItems": null,
          "item": Object {},
          "items": Array [],
          "setSortBy": null,
          "total": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Header__HeaderWrapper>
            <Logo />
            <SearchField
              appState="search page"
              getItems={null}
              items={Array []}
              searchBy="title"
              setSearchBy={null}
              value=""
            />
          </Header__HeaderWrapper>,
          <InfoBar
            appState="search page"
            getItems={null}
            item={Object {}}
            items={Array []}
            setSortBy={null}
            total={0}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Logo />,
              <SearchField
                appState="search page"
                getItems={null}
                items={Array []}
                searchBy="title"
                setSearchBy={null}
                value=""
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "appState": "search page",
                "getItems": null,
                "items": Array [],
                "searchBy": "title",
                "setSearchBy": null,
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "appState": "search page",
            "getItems": null,
            "item": Object {},
            "items": Array [],
            "setSortBy": null,
            "total": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
